# jake

./: .env.example  .gitignore  Cargo.toml
migrations/: 20260623235803_initial_migration.down.sql  20260623235803_initial_migration.up.sql  20260625004922_init_google.down.sql  20260625004922_init_google.up.sql  20260628162725_add_currency_col.down.sql  20260628162725_add_currency_col.up.sql  20260629015520_add_multiple_locations.down.sql  20260629015520_add_multiple_locations.up.sql  20260629164932_add_multiple_terms.down.sql  20260629164932_add_multiple_terms.up.sql  20260701015725_add_col_thread_id.down.sql  20260701015725_add_col_thread_id.up.sql  20260702162822_init_amazon.down.sql  20260702162822_init_amazon.up.sql  20260704214740_init_jane_street.down.sql  20260704214740_init_jane_street.up.sql  20260705000545_init_apple.down.sql  20260705000545_init_apple.up.sql  20260706040637_init_doordash.down.sql  20260706040637_init_doordash.up.sql  20260707034611_init_stripe.down.sql  20260707034611_init_stripe.up.sql
src/: main.rs
src/commands/: mod.rs  scrape.rs  update.rs
src/scrapers/: amazon.rs  apple.rs  doordash.rs  google.rs  jane_street.rs  mod.rs  stripe.rs
terraform/: .terraform.lock.hcl  database.tf  variables.tf
