[package]
name = "jake"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenvy = "0.15.7"
env = "1.0.1"
futures = "0.3.32"
poise = "0.6.2"
reqwest = "0.13.4"
scraper = "0.27.0"
serde = "1.0.228"
serde_json = "1.0.150"
serenity = "0.12"
sqlx = { version = "0.9.0", features = ["postgres", "runtime-tokio", "tls-native-tls"] }
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
tracing-subscriber = "0.3.23"
